# Solution2

./: .editorconfig  .gitignore  readme.md
cpp/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  benchmark.cpp  benchmark.hpp  build.bat  build.sh  main.cpp  premultiply_alpha.hpp  readme.md  test.cpp  test.hpp  vcpkg.json
dotnet/: dotnet.sln
dotnet/bench/: IntrinsicFilters.cs  PremultiplyBench.cs  PremultiplyBench.csproj
dotnet/lib/: NativeExports.cs  Premultiply.cs  Premultiply.csproj  PremultiplySimd.cs
dotnet/test/: IntrinsicFilters.cs  PremultiplyTest.cs  PremultiplyTest.csproj
